[gd_scene load_steps=7 format=3 uid="uid://ckb30m80odvp"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_da3h3"]
[ext_resource type="PackedScene" uid="uid://falvyc4yjisx" path="res://scenes/Component/health_component.tscn" id="2_h75se"]
[ext_resource type="Texture2D" uid="uid://bsakim4yhi5j5" path="res://images/Wizard - PurpleRed - 30x30.png" id="2_qdwml"]
[ext_resource type="PackedScene" uid="uid://cic3kx3d3wcko" path="res://scenes/Component/hitbox_component.tscn" id="3_bx1mu"]
[ext_resource type="Script" path="res://scenes/RuneCircle.gd" id="3_e4gok"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wpf4"]
size = Vector2(19, 26)

[node name="Player" type="Node2D"]
script = ExtResource("1_da3h3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -5)
texture = ExtResource("2_qdwml")

[node name="RuneCircle" type="Node2D" parent="."]
position = Vector2(14, -17)
scale = Vector2(0.5, 0.5)
script = ExtResource("3_e4gok")

[node name="HealthComponent" parent="." instance=ExtResource("2_h75se")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_bx1mu")]
collision_layer = 8
collision_mask = 16
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0.5, -3)
shape = SubResource("RectangleShape2D_3wpf4")

[node name="RuneQueueTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="RuneChargeScaler" type="Node2D" parent="."]
position = Vector2(-4, -29)
scale = Vector2(0.25, 0.25)

[node name="RuneChargeBar" type="ProgressBar" parent="RuneChargeScaler"]
offset_left = 12.0
offset_right = 20.0
offset_bottom = 36.0
max_value = 1.0
step = 0.001
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="RuneQueueTimer" to="." method="_on_rune_queue_timer_timeout"]
